# thermal-test

./: logs.txt
drivers/linux/RV1126/: README_RV1126.md
drivers/linux/RV1126/RV1126_configure_files/: ac020-all.c  ac020-mipi.c  rv1126-firefly-openwrt.dts
jetson_thermal_sample/: .gitignore  CMakeLists.txt  README.md  REAL_CAMERA_INTEGRATION.md  VIDEO_STREAMING_README.md  build.sh  build_fixed.sh  check_build.sh  run_thermal_camera.sh  setup_camera.sh  test_build.sh  test_json.sh  test_simple.sh
jetson_thermal_sample/config/: jetson_thermal.conf  jetson_thermal_simple.conf
jetson_thermal_sample/src/: config_parser.cpp  config_parser.h  main.cpp  simple_main.cpp  simple_thermal_camera.cpp  simple_thermal_camera.h  thermal_camera.cpp  thermal_camera.h
libir_SDK_release/include/: libircmd.h  libircmd_temp.h
libir_SDK_release/windows/: libir_infoparse_version_log  libircam_version_log  libircmd_version_log  libirdfu_version_log  libirparse_version_log  libirtemp_version_log  libiruart_version_log  libirupgrade_version_log  libiruvc_version_log
libir_SDK_release/windows/Win32/Debug/dll/: libircmd.lib  libirtemp.lib  libiruvc.lib
libir_SDK_release/windows/Win32/Debug/lib/: libir_infoparse.lib  libircam.lib  libircmd.lib  libirdfu.lib  libirparse.lib  libirtemp.lib  libiruart.lib  libiruvc.lib
libir_SDK_release/windows/Win32/Release/dll/: libirupgrade.lib  libiruvc.lib
libir_SDK_release/windows/Win32/Release/lib/: libir_infoparse.lib  libircam.lib  libircmd.lib  libirdfu.lib  libirparse.lib  libirtemp.lib  libiruart.lib  libiruvc.lib
libir_SDK_release/windows/x64/Debug/dll/: libircmd.lib  libirparse.lib  libiruvc.lib
libir_SDK_release/windows/x64/Debug/lib/: libir_infoparse.lib  libircam.lib  libircmd.lib  libirdfu.lib  libirparse.lib  libirtemp.lib  libiruart.lib  libiruvc.lib
libir_SDK_release/windows/x64/Release/dll/: libircmd.lib  libirtemp.lib  libirupgrade.lib
libir_SDK_release/windows/x64/Release/lib/: libir_infoparse.lib  libircam.lib  libircmd.lib  libirdfu.lib  libirparse.lib  libirtemp.lib  libiruart.lib  libiruvc.lib
libir_sample/: lib_include_copy.py
libir_sample/common/: data.h  opencv_display.cpp
libir_sample/components/: cmd.cpp
libir_sample/config/: stream_win.conf
libir_sample/interfaces/: libircmd_test.h
libir_sample/sample/upgrade/src/: sample.cpp
libir_sample/sample/usb_stream_cmd/src/: sample.cpp
libir_sample/simple_sample/cmd_camera/linux/uvc_usb/: CMakeLists.txt  sample.cpp
libir_sample/simple_sample/cmd_camera/linux/v4l2_i2c/: sample.cpp
libir_sample/simple_sample/cmd_camera/windows/uvc_usb/: sample.cpp
